# kodi.plugin.video.angelstudios

./: .gitattributes  .gitignore  AMNESIA_FIX.txt  BUILD.md  CHANGELOG.md  DEVELOPMENT.md  Makefile  README.md  TODO.md  addon.xml  bump_version.py  helpers.py  kodi.plugin.video.angelstudios  main.py  new_dev_shell_angel_session.pkl  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  temp.json  temp.pickle  test_credentials.json  test_credentials.json.example
.github/: copilot-instructions.md
.github/workflows/: build-zip-artifact.yml  ci.yml  new-build-process.yaml  release.yml
agents/: README.md
agents/plans/: CLEANUP - Phase 0.md  CLEANUP - Phase 1.md  CLEANUP - Phase 2.md  CLEANUP.md  GROK-ART-REGRESSION-FIX.md  GROK-CLEANUP-PHASE-4.md  (+19 more)
auth0-ciam-client/: Makefile  README.md  requirements-dev.txt  requirements.txt  setup.py
docs/: DEFERRED_CACHE_WRITES.md  OFFSCREEN_MODE_IMPLEMENTATION.md  README.md  TESTING.md  artwork_mapping.md  data_structure.md  metadata-mapping.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_2db425c0a7db4ede___init___py.html  z_2db425c0a7db4ede_angel_authentication_py.html  z_2db425c0a7db4ede_angel_interface_py.html  z_2db425c0a7db4ede_kodi_ui_interface_py.html  z_fcdc00ed591cf9c4_helpers_py.html  z_fcdc00ed591cf9c4_main_py.html
kodi_plugin_video_angelstudios.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
plugin.video.angelstudios/: CHANGELOG.md  addon.xml  helpers.py  main.py
tests/: skip_test_main.py  test_functionality.py  test_graphql_integration.py  test_kodi_ui_interface.py  test_refactor.py
tools/: dev_shell.py  new_dev_shell.py
(+104 files in other folders)
